--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.25.0",
     "react": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "scheduler": "^0.20.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.0.3",
+    "use-context-selector": "^1.3.9",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
